# SustainML-Library

./: .gitignore  .gitmodules  README.md  readthedocs.yaml  sustainml.repos
.github/workflows/: test.yml
docker/: README.md  SustainML.Dockerfile  SustainML.dockerfile  docker-compose.yaml  run.bash
sustainml_cpp/: CMakeLists.txt  README.md  package.xml  project_settings.cmake
sustainml_cpp/examples/: CMakeLists.txt
sustainml_cpp/examples/CliModules/: CMakeLists.txt  main.cpp  typesImpl.cxx  typesImpl.h  typesImpl.hpp  typesImpl.idl  typesImplCdrAux.hpp  typesImplCdrAux.ipp  typesImplPubSubTypes.cxx  typesImplPubSubTypes.h  typesImplPubSubTypes.hpp  typesImplTypeObject.cxx  typesImplTypeObject.h  typesImplTypeObjectSupport.cxx
sustainml_cpp/include/sustainml_cpp/config/: Macros.hpp  macros.hpp
sustainml_cpp/include/sustainml_cpp/core/: Callable.hpp  Constants.hpp  Dispatcher.hpp  Node.hpp  NodeListener.hpp  Options.hpp  QueuedNodeListener.hpp  RequestReplier.hpp  RequestReplyListener.hpp  SamplesQueue.hpp  TaskId.hpp
sustainml_cpp/include/sustainml_cpp/database/: Database.hpp
sustainml_cpp/include/sustainml_cpp/idl/: SustainMLService.idl  types.idl  typesImpl.idl
sustainml_cpp/include/sustainml_cpp/interfaces/: QueueQueryable.hpp  SampleQueryable.hpp
sustainml_cpp/include/sustainml_cpp/nodes/: AppRequirementsNode.hpp  CarbonFootprintNode.hpp  HardwareConstraintsNode.hpp  HardwareResourcesNode.hpp  MLModelMetadataNode.hpp  MLModelNode.hpp  TaskEncoderNode.hpp
sustainml_cpp/include/sustainml_cpp/orchestrator/: OrchestratorNode.hpp
sustainml_cpp/include/sustainml_cpp/types/: types.h  types.hpp  typesCdrAux.hpp  typesCdrAux.ipp  typesPubSubTypes.h
sustainml_cpp/src/cpp/: foo.txt  main.cpp  poc.cpp
sustainml_cpp/src/cpp/common/: Common.hpp
sustainml_cpp/src/cpp/core/: Dispatcher.cpp  Dispatcher.hpp  GenericServiceNodeImpl.hpp  Node.cpp  NodeImpl.cpp  NodeImpl.hpp  NodeListener.cpp  Options.cpp  Options.hpp  QueuedNodeListener.hpp  RequestReplier.cpp  SamplesQueue.cpp
sustainml_cpp/src/cpp/database/: Database.cpp
sustainml_cpp/src/cpp/nodes/: AppRequirementsNode.cpp  CarbonFootprintNode.cpp  HardwareConstraintsNode.cpp  HardwareResourcesNode.cpp  MLModelMetadataNode.cpp  MLModelNode.cpp  TaskEncoderNode.cpp
sustainml_cpp/src/cpp/orchestrator/: Helper.hpp  ModuleNodeProxy.cpp  ModuleNodeProxy.hpp  ModuleNodeProxy.ipp  ModuleNodeProxyFactory.hpp  OrchestratorNode.cpp  TaskDB.hpp  TaskDB.ipp  TaskManager.hpp
sustainml_cpp/src/cpp/types/: SustainMLService.hpp  SustainMLServiceCdrAux.hpp  SustainMLServiceCdrAux.ipp  SustainMLServiceClient.cxx  SustainMLServiceClient.hpp  SustainMLServicePubSubTypes.cxx  SustainMLServicePubSubTypes.hpp  SustainMLServiceServer.cxx  SustainMLServiceServer.hpp  SustainMLServiceServerImpl.hpp  SustainMLServiceTypeObjectSupport.cxx  SustainMLServiceTypeObjectSupport.hpp  SustainMLService_details.hpp  types.cpp  types.cxx  types.h  typesImpl.cxx  typesImpl.h  typesImpl.hpp  typesImplCdrAux.hpp  typesImplCdrAux.ipp  typesImplPubSubTypes.cxx  typesImplPubSubTypes.h  typesImplPubSubTypes.hpp  typesImplTypeObject.cxx  typesImplTypeObject.h  typesImplTypeObjectSupport.cxx  typesImplTypeObjectSupport.hpp  typesPubSubTypes.cxx  typesPubSubTypes.h
sustainml_cpp/src/cpp/utils/: SamplePool.hpp
sustainml_cpp/test/: CMakeLists.txt
sustainml_cpp/test/blackbox/: CMakeLists.txt
sustainml_cpp/test/blackbox/api/: ManagedNode.hpp  ManagedNodeService.hpp  TaskInjector.hpp  TaskReceiver.hpp
sustainml_cpp/test/blackbox/common/: BlackboxTests.cpp  BlackboxTests.hpp  BlackboxTestsCallbackProcessing.cpp  BlackboxTestsChainedNodes.cpp  BlackboxTestsIsolatedNodes.cpp  BlackboxTestsOrchestratorNode.cpp  BlackboxTestsRPCResponseNodes.cpp  BlackboxTestsResponseNodes.cpp
sustainml_cpp/test/blackbox/helpers/: data_generators.cpp
sustainml_cpp/test/unittest/: CMakeLists.txt
sustainml_cpp/utils/instructions/: README.md
sustainml_cpp/utils/scripts/: update_types.sh
sustainml_docs/: CMakeLists.txt  README.md  conf.py  index.rst  package.xml  project_settings.cmake  requirements.txt
sustainml_docs/installation/: docker.rst
sustainml_modules/: CMakeLists.txt  README.md  package.xml  project_settings.cmake  requirements.txt  setup.cfg  setup.py
sustainml_modules/src/cpp/: PubSubWriterReader.hpp  modules_poc.cpp
sustainml_modules/sustainml_modules/sustainml-wp4/: README.md  ResearchData.csv  data.html  frontend_node.py  index.html  styles.css
sustainml_modules/sustainml_modules/sustainml-wp5/: README.md  backend_node.py
sustainml_modules/sustainml_modules/sustainml-wp5/orchestrator_node/: orchestrator_node.py  utility.py  utils.py
sustainml_modules/test/: CMakeLists.txt
sustainml_modules/test/communication/: CMakeLists.txt  RequestOrchestratorNode.py  SimpleOrchestratorNode.cpp  SimpleOrchestratorNode.py  SimpleTaskBase.cpp  SimpleTaskBase.hpp  SimpleTaskPubSubMain.cpp  SimpleTaskPublisher.cpp  SimpleTaskPublisher.hpp  SimpleTaskSubscriber.cpp  SimpleTaskSubscriber.hpp  chained_nodes_validator.py
sustainml_modules/test/communication/types/: types.cpp  typesImpl.cxx  typesImpl.h  typesImpl.hpp  typesImpl.idl  typesImplCdrAux.hpp  typesImplCdrAux.ipp  typesImplPubSubTypes.cxx  typesImplPubSubTypes.h  typesImplTypeObject.cxx  typesImplTypeObject.h
sustainml_modules/test/communication/utils/: EnumTypes.hpp  TypeFactory.hpp  cli_parser.hpp
sustainml_py/: README.md  package.xml  setup.cfg  setup.py
sustainml_py/examples/: __init__.py  app_requirements_node.py  co2_node.py  hw_constratins_node.py  hw_res_node.py  hw_resources_node.py  ml_metadata_node.py  ml_model_node.py  task_encoder_node.py
sustainml_py/sustainml_py/: AsyncTaskManager.py  __init__.py
sustainml_py/sustainml_py/nodes/: AppRequirementsNode.py  CarbonFootprintNode.py  HardwareConstraintsNode.py  HardwareResourcesNode.py  MLModelMetadataNode.py  MLModelNode.py  OrchestratorNode.py  TaskEncoderNode.py  __init__.py
sustainml_swig/: CMakeLists.txt  README.md  package.xml  project_settings.cmake
sustainml_swig/examples/: test_co2.py  test_hw.py  test_task.py
(+37 files in other folders)
