<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sustainml_cpp</name>
  <version>0.0.0</version>
  <description>
     *SustainML* C++ API Module is a C++ API to implement Node interface.
  </description>
  <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="mariodominguez@eprosima.com">Mario Domínguez</maintainer>
  <maintainer email="jesuspoderoso@eprosima.com">Jesús Poderoso</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/SustainML/issues</url>
  <url type="repository">https://github.com/eProsima/SustainML</url>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>fastcdr</depend>
  <depend>fastrtps</depend>
  <depend>cmake_utils</depend>
  <depend>cpp_utils</depend>

  <test_depend>googletest-distribution</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
