<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sustainml_modules</name>
  <version>0.1.0</version>
  <description>
    *SustainML* Modules Nodes Implementation
  </description>
  <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="mariodominguez@eprosima.com">Mario Domínguez</maintainer>
  <maintainer email="jesuspoderoso@eprosima.com">Jesús Poderoso</maintainer>
  <maintainer email="javiergil@eprosima.com">Javier Gil</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/SustainML/issues</url>
  <url type="repository">https://github.com/eProsima/SustainML</url>

  <depend>sustainml_py</depend>
  <depend>py_utils</depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
